# fractal_explorer

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  README.md
.beads/: config.yaml  issues.jsonl
.claude/: settings.json
benches/: presenter_copy.rs  render_pipeline.rs
plans/: SCREEN_RENDERING_MILESTONE_1.md  SCREEN_RENDERING_MILESTONE_2.md  SCREEN_RENDERING_MILESTONE_3.md  SCREEN_RENDERING_SPEC.md  UI_COLOUR_MAP.md  single_pass.md
scripts/: flamegraph.sh
src/: lib.rs  main.rs
src/adapters/: mod.rs  pixel_format.rs
src/adapters/present/: mod.rs  pixels_presenter.rs
src/controllers/: mandelbrot.rs  mod.rs
src/controllers/cli/test/: cli_test.rs
src/controllers/interactive/: controller.rs  mod.rs  types.rs
src/controllers/interactive/data/: fractal_config.rs  frame_data.rs  mod.rs  render_request.rs
src/controllers/interactive/errors/: render_error.rs
src/controllers/ports/: file_presenter.rs  mod.rs
src/core/: mod.rs
src/core/actions/: cancellation.rs  mod.rs  render_pixel_buffer.rs
src/core/data/: colour.rs  complex.rs  complex_rect.rs  deep_complex.rs  deep_region.rs  fractal.rs  fractal_params.rs  mod.rs  pixel_buffer.rs  pixel_rect.rs  point.rs
src/core/flight/: controls.rs  limits.rs  mod.rs  motion.rs  status.rs
src/core/fractals/: fractal_kinds.rs  mod.rs
src/core/util/: calculate_bands_in_pixel_rect.rs  calculate_threads_for_pixel_rect_banding.rs  iteration_colour_lut.rs  mod.rs  pixel_to_complex_coords.rs
src/gpu/: mod.rs  perturbation.wgsl  perturbation_renderer.rs
src/input/: mod.rs
src/input/gui/: app.rs  events.rs  mod.rs  ui_state.rs
src/presenters/: mod.rs  pixels_presenter.rs
src/presenters/file/: ppm.rs
src/presenters/pixels/: adapter.rs  factory.rs  mod.rs  paused_overlay.rs  presenter.rs
src/storage/: mod.rs  write_ppm.rs
(+79 files in other folders)
