[package]
name = "fractal_explorer"
version = "0.1.0"
edition = "2024"

[dependencies]
rayon = "1.10"

# GUI dependencies (optional)
winit = { version = "0.29", optional = true }
pixels = { version = "0.15", optional = true }
egui = { version = "0.26", optional = true }
egui-winit = { version = "0.26", optional = true }
egui-wgpu = { version = "0.26", optional = true }

[features]
default = []
gui = [
    "dep:winit",
    "dep:pixels",
    "dep:egui",
    "dep:egui-winit",
    "dep:egui-wgpu",
]

[[bin]]
name = "gui"
path = "src/bin/gui.rs"
required-features = ["gui"]

[dev-dependencies]
cargo-llvm-cov = "0.6.22"
