[package]
name = "fractal_explorer"
version = "0.1.0"
edition = "2024"

[dependencies]
rayon = "1.10"
dashu-float = "0.4.4"

# GPU compute dependencies (optional; wgpu version matched to pixels')
wgpu = { version = "0.19", optional = true }
pollster = { version = "0.3", optional = true }
bytemuck = { version = "1", features = ["derive"], optional = true }

# GUI dependencies (optional)
winit = { version = "0.29", optional = true }
pixels = { version = "0.15", optional = true }
egui = { version = "0.26", optional = true }
egui-winit = { version = "0.26", optional = true }
egui-wgpu = { version = "0.26", optional = true }

[features]
default = []
gpu = [
    "dep:wgpu",
    "dep:pollster",
    "dep:bytemuck",
]
gui = [
    "gpu",
    "dep:winit",
    "dep:pixels",
    "dep:egui",
    "dep:egui-winit",
    "dep:egui-wgpu",
]

[[bin]]
name = "gui"
path = "src/bin/gui.rs"
required-features = ["gui"]

[profile.bench]
debug = true

[dev-dependencies]
cargo-llvm-cov = "0.6.22"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "render_pipeline"
harness = false
